att-branche-add-validation-user-logged

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ campo.guild.obrigatorio= O campo cla é obrigatório
 campo.classe.obrigatorio= O campo classe é obrigatorio
 campo.alt.obrigatorio= O campo alt é obrigatório
 campo.principal.obrigatorio= O campo principal é obrigatório
+campo.login.obrigatorio= O campo Login é obrigatório
+campo.senha.obrigatorio= O campo Senha é obrigatório
+campo.email.obrigatorio= O campo Email é obrigatório
