add-flyway-and-data-to-sql

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,5 @@
 campo.nick.obrigatorio= O campo nick é obrigatório
-campo.level.obrigatorio= O campo level é obrigatório
+campo.nivel.obrigatorio= O campo nivel é obrigatório
 campo.power.obrigatorio= O campo power é obrigatório
 campo.codex.obrigatorio= O campo codex é obrigatório
 campo.guild.obrigatorio= O campo cla é obrigatório
